fixed a variety of layout issues for IE and chrome by updating the spacing on the templates and changing the border syntax

--- a/src/croaker/css/croaker.css
+++ b/src/croaker/css/croaker.css
@@ -33,7 +33,7 @@ tbody td {
   text-align:right;
   padding-right:.32em;
   border-left-style:solid;
-  border-left-width:.05em;
+  border-left-width:1px;
 }
 
 tbody tr td:first-child {
@@ -46,17 +46,12 @@ tbody tr td:nth-child(2) {
   padding-left:.32em;
 }
 
-tbody tr td:nth-child(3) {
-
-}
-
 .heading {
   width:15%;
   float:right;
   text-align:right;
   padding-right:.5em;
   font-size:2em;
-  font:Arial;
 }
 
 .highlighted > td {
@@ -72,10 +67,6 @@ form > div {
   padding-top:.5em;
 }
 
-form > div:last-child {
-
-}
-
 form button {
   width:7em;
 }
@@ -83,5 +74,3 @@ form button {
 form input[type='text'] {
   width:15em;
 }
-
-
